--- a/IndicatorsManagerApp/src/app/app.component.html
+++ b/IndicatorsManagerApp/src/app/app.component.html
@@ -1,10 +1,4 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="isUserLoggedIn()">
-  <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="/">Home</a>
-      <a class="nav-item nav-link" routerLink="/user/add">Add User</a>
-      <a class="nav-item nav-link" (click)="logout()">Logout</a>
-  </div>
-</nav>
+<app-header *ngIf="isUserLoggedIn()"></app-header>
 <router-outlet></router-outlet>
 
 
