--- a/IndicatorsManagerApp/src/app/user-edit/user-edit.component.css
+++ b/IndicatorsManagerApp/src/app/user-edit/user-edit.component.css
@@ -1,7 +1,3 @@
-h2 {
-    text-align: center;
-}
-
 .wrapper {
     width: 80%;
     display: flex;
@@ -13,4 +9,8 @@ h2 {
 .row button {
     width: 70%;
     margin: 5px auto !important;
+}
+
+.title {
+    text-align: center;
 }
