name input field added

--- a/IndicatorsManagerApp/src/app/condition-dropdown/condition-dropdown.component.html
+++ b/IndicatorsManagerApp/src/app/condition-dropdown/condition-dropdown.component.html
@@ -30,6 +30,7 @@
       <div *ngSwitchCase="'Date'">
         <mat-form-field class="example-full-width col-6 p-0 m-0" >
             <input matInput [matDatepicker]="picker" placeholder="Choose a date" [formControl]="inputDate" (dateChange)="onChangeDate($event)">
+            <mat-error *ngIf="inputQuery.hasError('required')">Field is <strong>required</strong></mat-error>
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
@@ -46,18 +47,20 @@
       <div *ngSwitchCase="'Sql'">
         <mat-form-field class="example-full-width" >     
             <input matInput placeholder="query...." [formControl]="inputQuery" (change)="onChangeString($event)">
+            <mat-error *ngIf="inputQuery.hasError('required')">Field is <strong>required</strong></mat-error>
         </mat-form-field>
       </div>
       <div *ngSwitchCase="'String'">
         <mat-form-field class="example-full-width" >     
             <input matInput placeholder="string...." [formControl]="inputString" (change)="onChangeString($event)">
+            <mat-error *ngIf="inputString.hasError('required')">Field is <strong>required</strong></mat-error>
         </mat-form-field>
       </div>
       <div *ngSwitchCase="'Int'">
         <mat-form-field class="example-full-width" >        
           <input matInput placeholder="number...." [formControl]="inputInt" (change)="onChangeInt($event)">
-          <mat-error *ngIf="inputInt.hasError('required')">Input is <strong>required</strong></mat-error>
-          <mat-error *ngIf="!inputInt.hasError('required') && inputInt.hasError('incorrect')">Input must be <strong>numeric</strong></mat-error>
+          <mat-error *ngIf="inputInt.hasError('required')">Field is <strong>required</strong></mat-error>
+          <mat-error *ngIf="!inputInt.hasError('required') && inputInt.hasError('incorrect')">The input must be <strong>numeric</strong></mat-error>
         </mat-form-field>
       </div>
     </div>
