--- a/IndicatorsManagerApp/src/app/condition-edit/condition-edit.component.html
+++ b/IndicatorsManagerApp/src/app/condition-edit/condition-edit.component.html
@@ -13,7 +13,9 @@
         </mat-form-field>
     </div>
     <div class="col margin-auto">
-      <button mat-raised-button color="primary">Save</button>
+      <button mat-raised-button color="primary" 
+        [disabled]="isInvalidCondition()" 
+        (click)="createItemIndicator()">Save</button>
     </div>
 </div>
       
