--- a/IndicatorsManagerApp/src/app/header/header.component.html
+++ b/IndicatorsManagerApp/src/app/header/header.component.html
@@ -27,18 +27,17 @@
   </mat-menu>
 
   <mat-menu #areas="matMenu">
-    <button mat-menu-item>All Areas</button>
-    <button mat-menu-item>Add New Area</button>
-    <button mat-menu-item>Manager Assignment</button>
+    <button mat-menu-item routerLink="/areas">All Areas</button>
+    <button mat-menu-item routerLink="/areas/add">Add New Area</button>
+    <button mat-menu-item routerLink="/areas/managers">Manager Assignment</button>
   </mat-menu>
 
   <mat-menu #indicators="matMenu">
-    <button mat-menu-item>Add New Indicator</button>
-    <button mat-menu-item>Import Indicators</button>
+    <button mat-menu-item routerLink="/importer">Import Indicators</button>
   </mat-menu>
 
   <mat-menu #reports="matMenu">
-    <button mat-menu-item>Top Hidden Indicators</button>
-    <button mat-menu-item>Most Frequent Logged in Users</button>
+    <button mat-menu-item routerLink="/reports/hidden-indicators">Top Hidden Indicators</button>
+    <button mat-menu-item routerLink="/reports/frequent-users">Most Frequent Logged in Users</button>
   </mat-menu>
 </mat-toolbar>
