--- a/IndicatorsManagerApp/src/app/area-edit/area-edit.component.html
+++ b/IndicatorsManagerApp/src/app/area-edit/area-edit.component.html
@@ -1,3 +1,32 @@
-<p>
-  area-edit works!
-</p>
+<mat-card>
+  <mat-card-title class="title">{{title}}</mat-card-title>
+  <div class="row wrapper">
+    <mat-form-field>
+      <input matInput placeholder="Area name" [formControl]="name" (keyup.enter)="name.invalid ? null : save()">
+      <mat-error *ngIf="name.invalid">Area name is <strong>required</strong></mat-error>
+    </mat-form-field>
+  
+    <mat-form-field>
+      <input matInput placeholder="Data Source" [formControl]="dataSource" (keyup.enter)="dataSource.invalid ? null : save()">
+      <mat-error *ngIf="dataSource.invalid">Data Source is <strong>required</strong></mat-error>
+    </mat-form-field>
+  </div>
+  <div class="row wrapper">
+    <app-error-message *ngIf="errorMessage" [message]="errorMessage"></app-error-message>
+  </div>
+  <div class="row wrapper">
+    <button mat-raised-button color="primary" (click)="save()">Save</button>
+    <button mat-raised-button class="m-1" (click)="goBack()">Back</button>
+  </div>
+  <div class="row" *ngIf="idEdit">
+    <ng-container *ngIf="indicatorList && indicatorList.lenght > 0; else emptyList">
+      <div class="col">
+        <h3>Indicators List</h3>
+      </div>
+      <div class="col"></div>
+    </ng-container>
+    <ng-template #emptyList>
+      <div class="col">Empty Indicators</div>
+    </ng-template>
+  </div>
+</mat-card>
