--- a/IndicatorsManagerApp/src/styles.css
+++ b/IndicatorsManagerApp/src/styles.css
@@ -5,3 +5,20 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.wrapper {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    padding: 5px;  
+}
+
+.row button {
+    width: 70%;
+    margin: 5px auto !important;
+}
+
+.title {
+    text-align: center;
+}
