--- a/IndicatorsManagerApp/src/app/indicator-list/indicator-list.component.css
+++ b/IndicatorsManagerApp/src/app/indicator-list/indicator-list.component.css
@@ -12,10 +12,10 @@ button.icon-button {
 
 .item-row{
     border-bottom: 1px solid #3f51b5;
-    height: 70px;
+    height: 75px;
 }
 
-.item-row:hover .action-row, .item-row:hover{
+.item-row-created:hover .action-row, .item-row-created:hover{
     display: flex !important;
     background-color: #C5CAE9;
 }
@@ -37,3 +37,4 @@ button.icon-button {
 .input-indicator {
     width: 100%;
 }
+
