--- a/IndicatorsManagerApp/src/app/condition-edit/condition-edit.component.html
+++ b/IndicatorsManagerApp/src/app/condition-edit/condition-edit.component.html
@@ -3,6 +3,7 @@
   <div class="row">
     <div class="col">
       <label *ngIf="currentExpression">Current Expression: {{currentExpression}}</label>
+      <app-error-message *ngIf="errorMessage" [message]="errorMessage"></app-error-message>
     </div>
   </div>
   <div class="row mb-5">
@@ -14,7 +15,7 @@
     </div>
     <div class="col margin-auto">
       <button mat-raised-button color="primary" 
-        [disabled]="isInvalidCondition()" 
+        [disabled]="!isValidCondition()" 
         (click)="createItemIndicator()">Save</button>
     </div>
 </div>
