indicator edit component updated

--- a/IndicatorsManagerApp/src/app/indicator-edit/indicator-edit.component.html
+++ b/IndicatorsManagerApp/src/app/indicator-edit/indicator-edit.component.html
@@ -22,8 +22,7 @@
     <div class="col">
       <div class="row">
         <div class="col">
-          <!-- <app-indicator-list [areaId]="indicatorId"></app-indicator-list> -->
-          LISTAAAAAAA
+          <app-condition-list [indicatorId]="indicatorId"></app-condition-list>
         </div>
       </div>
     </div>
