--- a/IndicatorsManagerApp/src/app/area-list/area-list.component.html
+++ b/IndicatorsManagerApp/src/app/area-list/area-list.component.html
@@ -1,10 +1,37 @@
-<div class="row wrapper">
-  <app-error-message *ngIf="errorMessage" [message]="errorMessage"></app-error-message>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      AREA LIST
+<mat-card>
+  <mat-card-title class="title">Area List</mat-card-title>
+  <div class="row wrapper">
+      <app-error-message *ngIf="errorMessage" [message]="errorMessage"></app-error-message>
+  </div>
+  <div class="m-2">
+    <div class="row header-row title">
+      <div class="col-4"><span>NAME</span></div>
+      <div class="col-6"><span>DATA SOURCE</span></div>
+      <div class="col-2">
+        <button mat-fab class="icon-button" color="accent" routerLink="/areas/add">
+          <mat-icon>add</mat-icon>
+        </button>
+      </div>
+    </div>
+    <div class="box">
+      <div class="row item-row item-row-created" *ngFor="let item of areas">
+        <div class="col-4"><span class="title">{{item.name}}</span></div>
+        <div class="col-6"><span class="title">{{item.dataSource}}</span></div>
+        <div class="col-2">
+          <div class="row action-row">
+            <div class="col">
+              <button mat-fab class="icon-button" color="primary" (click)="editArea(item.id)">
+                <mat-icon>create</mat-icon>
+              </button>
+            </div>
+            <div class="col">
+              <button mat-fab class="icon-button" color="warn" (click)="deleteArea(item.id)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+</mat-card>
