--- a/IndicatorsManagerApp/src/app/condition-dropdown/condition-dropdown.component.html
+++ b/IndicatorsManagerApp/src/app/condition-dropdown/condition-dropdown.component.html
@@ -4,7 +4,7 @@
         <mat-label>Select Condition Type</mat-label>
         <mat-select [(value)]="selectedConditionType">
           <mat-option *ngIf="!isRoot()" value="Sql">Query</mat-option>
-          <mat-option *ngIf="!isRoot()" value="String">Text</mat-option>
+          <mat-option *ngIf="!isRoot()" value="Text">Text</mat-option>
           <mat-option *ngIf="!isRoot()" value="Int">Number</mat-option>
           <mat-option *ngIf="!isRoot()" value="Date">Date</mat-option>
           <mat-option *ngIf="!isRoot()" value="Boolean">Boolean</mat-option>
@@ -46,19 +46,19 @@
       </div>
       <div *ngSwitchCase="'Sql'">
         <mat-form-field class="example-full-width" >     
-            <input matInput placeholder="query...." [formControl]="inputQuery" (change)="onChangeString($event)">
+            <input matInput placeholder="Enter a query...." [formControl]="inputQuery" (change)="onChangeString($event)">
             <mat-error *ngIf="inputQuery.hasError('required')">Field is <strong>required</strong></mat-error>
         </mat-form-field>
       </div>
-      <div *ngSwitchCase="'String'">
+      <div *ngSwitchCase="'Text'">
         <mat-form-field class="example-full-width" >     
-            <input matInput placeholder="string...." [formControl]="inputString" (change)="onChangeString($event)">
+            <input matInput placeholder="Enter some text...." [formControl]="inputString" (change)="onChangeString($event)">
             <mat-error *ngIf="inputString.hasError('required')">Field is <strong>required</strong></mat-error>
         </mat-form-field>
       </div>
       <div *ngSwitchCase="'Int'">
         <mat-form-field class="example-full-width" >        
-          <input matInput placeholder="number...." [formControl]="inputInt" (change)="onChangeInt($event)">
+          <input matInput placeholder="Enter a number...." [formControl]="inputInt" (change)="onChangeInt($event)">
           <mat-error *ngIf="inputInt.hasError('required')">Field is <strong>required</strong></mat-error>
           <mat-error *ngIf="!inputInt.hasError('required') && inputInt.hasError('incorrect')">The input must be <strong>numeric</strong></mat-error>
         </mat-form-field>
