--- a/IndicatorsManagerApp/src/app/condition-list/condition-list.component.css
+++ b/IndicatorsManagerApp/src/app/condition-list/condition-list.component.css
@@ -3,21 +3,24 @@ button.icon-button {
 }
 
 .header-row{
-    border-top: 1px solid #3f51b5;
-    background-color: #9FA8DA;
-    height: 70px;
+    border-top: 1px solid #b6b6b6;
+    background-color: #3f51b5;
+    color: #fafafa;
+    height: 75px;
     padding: auto;
     align-content: center;
+    font-weight: bold;
+
 }
 
 .item-row{
-    border-bottom: 1px solid #3f51b5;
+    border-bottom: 1px solid #b6b6b6;
     height: 75px;
 }
 
 .item-row-created:hover .action-row, .item-row-created:hover{
     display: flex !important;
-    background-color: #C5CAE9;
+    background-color: #dadada;
 }
 
 .action-row { display: none; }
@@ -28,6 +31,17 @@ button.icon-button {
     align-content: center;
 }
 
+.item-row span {
+    margin: auto;
+}
+.header-row span {
+    margin: 10px;
+}
+.header-row > .col {
+    margin: auto;
+    padding: auto;
+    align-content: center;
+}
 .box {
     height: 50vh;
     overflow-y: auto;
