--- a/IndicatorsManagerApp/src/app/condition-edit/condition-edit.component.html
+++ b/IndicatorsManagerApp/src/app/condition-edit/condition-edit.component.html
@@ -1,19 +1,26 @@
 <mat-card>
-  <mat-card-title>Add New Condition</mat-card-title>
+  <div class="row">
+      <div class="col">  
+        <mat-card-title>Add New Condition</mat-card-title>
+      </div>
+      <div class="col-2">
+          <button mat-raised-button class="" (click)="goBack()">Back</button>
+      </div>
+  </div>
   <div class="row">
     <div class="col">
       <label *ngIf="currentExpression">Current Expression: {{currentExpression}}</label>
       <app-error-message *ngIf="errorMessage" [message]="errorMessage"></app-error-message>
     </div>
   </div>
-  <div class="row mb-5">
-    <div class="col-10">
+  <div class="row">
+    <div class="col">
         <mat-form-field class="example-full-width inputName" >     
           <input matInput placeholder="Enter condition colour....." [formControl]="conditionName">
           <mat-error *ngIf="conditionName.hasError('required')">Field is <strong>required</strong></mat-error>
         </mat-form-field>
     </div>
-    <div class="col margin-auto">
+    <div class="col-2">
       <button mat-raised-button color="primary" 
         [disabled]="!isValidCondition()" 
         (click)="createItemIndicator()">Save</button>
