--- a/IndicatorsManagerApp/src/app/condition-list/condition-list.component.html
+++ b/IndicatorsManagerApp/src/app/condition-list/condition-list.component.html
@@ -4,27 +4,21 @@
     <div class="row wrapper">
         <app-error-message *ngIf="errorMessage" [message]="errorMessage"></app-error-message>
     </div>
-    <div class="box">
-      <div class="row header-row">
-        <div class="col"><span>Condition Colour</span></div>
-        <div class="col-3">
-            <button mat-fab class="icon-button" color="accent" (click)="addCondition()">
-              <mat-icon>add</mat-icon>
-            </button>
-        </div>  
-      </div>
-      <div class="row item-row item-row-created" *ngFor="let item of conditions">
+    <div class="row header-row">
+      <div class="col"><span>Condition Colour</span></div>
+      <div class="col-2">
+          <button mat-fab class="icon-button" color="accent" (click)="addCondition()">
+            <mat-icon>add</mat-icon>
+          </button>
+      </div>  
+    </div>
+    <div class="box p-0 m-0">
+      <div class="row item-row item-row-created p-0 m-0" *ngFor="let item of conditions">
             <div class="col"><span>{{item.name}}</span></div>
-            <div class="col">
-              <div class="row action-row">
-                  <div class="col">
-                  </div>
-                  <div class="col">
-                    <button mat-fab class="icon-button" color="warn" (click)="deleteCondition(item.id)">
-                      <mat-icon>delete</mat-icon>
-                    </button>
-                  </div>
-              </div>
+            <div class="col-2">
+              <button mat-fab class="icon-button" color="warn" (click)="deleteCondition(item.id)">
+                <mat-icon>delete</mat-icon>
+              </button> 
             </div>
         </div>
     </div>
