--- a/IndicatorsManagerApp/src/styles.css
+++ b/IndicatorsManagerApp/src/styles.css
@@ -26,3 +26,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 button:focus {
     outline:0;
 }
+
+.mat-tooltip {
+    font-size: 15px !important;
+    font-weight: bold !important;
+    color: #fafafa;
+}
