--- a/IndicatorsManagerApp/src/app/area-list/area-list.component.html
+++ b/IndicatorsManagerApp/src/app/area-list/area-list.component.html
@@ -5,8 +5,8 @@
   </div>
   <div class="m-2">
     <div class="row header-row title">
-      <div class="col-4"><span>NAME</span></div>
-      <div class="col-6"><span>DATA SOURCE</span></div>
+      <div class="col-4 mt-3"><span>NAME</span></div>
+      <div class="col-6 mt-3"><span>DATA SOURCE</span></div>
       <div class="col-2">
         <button mat-fab class="icon-button" color="accent" routerLink="/areas/add">
           <mat-icon>add</mat-icon>
@@ -14,9 +14,9 @@
       </div>
     </div>
     <div class="box">
-      <div class="row item-row item-row-created" *ngFor="let item of areas">
-        <div class="col-4"><span class="title">{{item.name}}</span></div>
-        <div class="col-6"><span class="title">{{item.dataSource}}</span></div>
+      <div class="row item-row item-row-created title" *ngFor="let item of areas">
+        <div class="col-4 mt-4"><span>{{item.name}}</span></div>
+        <div class="col-6 mt-4"><span>{{item.dataSource}}</span></div>
         <div class="col-2">
           <div class="row action-row">
             <div class="col">
