--- a/IndicatorsManagerApp/src/app/condition-list/condition-list.component.html
+++ b/IndicatorsManagerApp/src/app/condition-list/condition-list.component.html
@@ -14,12 +14,17 @@
     </div>
     <div class="box p-0 m-0">
       <div class="row item-row item-row-created p-0 m-0" *ngFor="let item of conditions">
-            <div class="col" [ngSwitch]="getValue(item.result.conditionResult)">
-              <span>{{item.name}}</span><mat-icon class="ml-4 mt-4" matTooltip="{{item.result.conditionToString}}">visibility</mat-icon>
-              <mat-icon class="ml-4 mt-4" matTooltip="Your condition has this error: {{item.result.conditionResult}}" 
-                *ngSwitchCase="'string'">error_outline</mat-icon>
-              <mat-icon class="ml-4 mt-4" *ngSwitchCase="'true'" matTooltip="The condition is active">notifications_active</mat-icon>
-              <mat-icon class="ml-4 mt-4" *ngSwitchCase="'false'" matTooltip="The condition is momentarily deactivated">notifications_none</mat-icon>
+            <div class="col">
+              <span>{{item.name}}</span>
+            </div>
+            <div class="col-4" [ngSwitch]="getValue(item.result.conditionResult)">
+              <mat-icon class="ml-4 mt-4" matTooltip="{{item.result.conditionToString}}">visibility</mat-icon>
+              <mat-icon *ngSwitchCase="'string'" class="ml-4 mt-4" style="color:orange" 
+                  matTooltip="Your condition will never be active due to this error: {{item.result.conditionResult}}">warning</mat-icon>
+              <mat-icon *ngSwitchCase="'true'" class="ml-4 mt-4" style="color:green" 
+                  matTooltip="The condition is active">notifications_active</mat-icon>
+              <mat-icon *ngSwitchCase="'false'" class="ml-4 mt-4" 
+                  matTooltip="The condition is momentarily deactivated">notifications_none</mat-icon>
             </div>
             <div class="col-2">
                 <div class="row action-row p-0 m-0">
