manager assignment component modified to be an area selector

--- a/IndicatorsManagerApp/src/app/manager-assignment/manager-assignment.component.html
+++ b/IndicatorsManagerApp/src/app/manager-assignment/manager-assignment.component.html
@@ -1,25 +1,16 @@
-<div class="row">
-    <button mat-raised-button color="primary" (click)="showList(done)">Show Done List</button>
-</div>
-<div class="row" cdkDropListGroup>
-  <div class="col example-container m-5">
-    <h2>All Managers</h2>
-    <div
-      cdkDropList
-      [cdkDropListData]="todo"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="col example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+<mat-card>
+  <div class="mt-4">
+    <mat-card-title class="title">Area Manager Assignment</mat-card-title>
+    <div class="row wrapper">
+        <app-error-message *ngIf="errorMessage" [message]="errorMessage"></app-error-message>
     </div>
   </div>
-  <div class="col example-container m-5">
-    <h2>Assigned Managers</h2>
-    <div
-      cdkDropList
-      [cdkDropListData]="done"
-      class="example-list"
-      (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
-    </div>
-  </div>  
-</div>
+  <div class="wrapper">
+      <mat-form-field>
+          <mat-label>Select an area to assign managers in ........</mat-label>
+          <mat-select [(value)]="selectedArea" (selectionChange)="areaSelection()">
+            <mat-option *ngFor="let area of allAreas" value="{{area.id}}">{{area.name}}</mat-option>
+          </mat-select>
+      </mat-form-field>
+  </div>
+</mat-card>
