--- a/IndicatorsManagerApp/src/app/manager-assignment-list/manager-assignment-list.component.css
+++ b/IndicatorsManagerApp/src/app/manager-assignment-list/manager-assignment-list.component.css
@@ -17,10 +17,10 @@
   }
   
   .example-box {
-    padding: 20px 10px;
+    padding: 15px 10px;
     border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
-    display: flex;
+    /* display: flex; */
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
@@ -44,10 +44,6 @@
   
   .cdk-drag-animating {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  }
-  
-  .example-box:last-child {
-    border: none;
   }
   
   .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
