--- a/IndicatorsManagerApp/src/app/condition-dropdown/condition-dropdown.component.html
+++ b/IndicatorsManagerApp/src/app/condition-dropdown/condition-dropdown.component.html
@@ -58,7 +58,7 @@
       </div>
       <div *ngSwitchCase="'Int'">
         <mat-form-field class="example-full-width" >        
-          <input matInput placeholder="Enter a number...." [formControl]="inputInt" (change)="onChangeInt($event)">
+          <input type="number" matInput placeholder="Enter a number...." [formControl]="inputInt" (change)="onChangeInt($event)">
           <mat-error *ngIf="inputInt.hasError('required')">Field is <strong>required</strong></mat-error>
           <mat-error *ngIf="!inputInt.hasError('required') && inputInt.hasError('incorrect')">The input must be <strong>numeric</strong></mat-error>
         </mat-form-field>
