--- a/IndicatorsManagerApp/src/app/user-indicator-config/user-indicator-config.component.html
+++ b/IndicatorsManagerApp/src/app/user-indicator-config/user-indicator-config.component.html
@@ -10,12 +10,30 @@
 </ng-container>
 <ng-template #elseTemplate>
   <div class="row wrapper">
-      <h2 class="title">My Indicators</h2>
+      <h2 class="mt-4 title">My Indicators Configurations</h2>
       <app-error-message *ngIf="errorMessage" [message]="errorMessage"></app-error-message>
   </div>
-  <div class="example-container">  
-    <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-      <div class="example-box" *ngFor="let movie of movies" cdkDrag>{{movie}}</div>
+  <div class="container">
+    <div class="example-container wrapper">  
+        <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+          <div class="example-box pl-5 pr-5" *ngFor="let item of indicators" cdkDrag>
+            <div class="col">{{getName(item)}}</div>
+            <div class="col-2">
+              <button mat-icon-button 
+                matTooltip="Customize indicator name"
+                (click)="updateIndicatorAlias(item)">
+                  <mat-icon>edit</mat-icon>
+              </button>
+            </div>
+            <div class="col-2">
+              <button mat-icon-button 
+                matTooltip="Currently your indicator is {{item.isVisible ? 'visible' : 'hidden'}}. Click me to {{item.isVisible ? 'hide it' : 'show it up'}}."
+                (click)="changeIndicatorVisibility(item)">
+                  <mat-icon>{{item.isVisible ? 'visibility_off' : 'visibility'}}</mat-icon>
+              </button>
+            </div>
+          </div>
+        </div>
     </div>
   </div>
 </ng-template>
