--- a/IndicatorsManagerApp/src/app/user-indicator-config/user-indicator-config.component.css
+++ b/IndicatorsManagerApp/src/app/user-indicator-config/user-indicator-config.component.css
@@ -45,3 +45,26 @@
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+button.icon mat-icon{
+  width: 24px;
+  height: 24px;
+  transform: scale(1.5);
+}
+
+div.col span{
+  font-size: 20px;
+}
+
+div.example-box:hover{
+  background-color: #dadada;
+}
+
+div.example-box:hover button.icon-hover {
+  display: inline;
+}
+
+button.icon-hover{
+  display: none;
+}
+
