--- a/IndicatorsManagerApp/src/app/user-indicator-active/user-indicator-active.component.css
+++ b/IndicatorsManagerApp/src/app/user-indicator-active/user-indicator-active.component.css
@@ -46,3 +46,16 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
+button mat-icon{
+  width: 24px;
+  height: 24px;
+  transform: scale(1.5);
+}
+
+div span{
+  font-size: 20px;
+}
+
+div.example-box:hover{
+  background-color: #dadada;
+}
