--- a/IndicatorsManagerApp/src/app/user-indicator-config/user-indicator-config.component.css
+++ b/IndicatorsManagerApp/src/app/user-indicator-config/user-indicator-config.component.css
@@ -28,6 +28,8 @@
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
               0 8px 10px 1px rgba(0, 0, 0, 0.14),
               0 3px 14px 2px rgba(0, 0, 0, 0.12);
+  background-color: #dadada;
+
 }
 
 .cdk-drag-placeholder {
@@ -44,6 +46,7 @@
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+
 }
 
 button.icon mat-icon{
@@ -67,4 +70,3 @@ div.example-box:hover button.icon-hover {
 button.icon-hover{
   display: none;
 }
-
